# simple-protocol-chatGPT

./: README.md
c++/: message.cpp  message.h  node.cpp  node.h
c++/main/: CMakeLists.txt  MainNode.cpp  MainNode.h  Makefile  main-app.cpp
c++/secondary-app/: CMakeLists.txt  Makefile  secondary-node.cpp
python/: app.py  message.py  node.py
rust/app/src/: main.rs
rust/app/src/message/: mod.rs
rust/app/src/node/: mod.rs
zig/: Node.zig  main.zig
